# snake

./: .clang-format  .gitignore  CMakeLists.txt  snake.cpp
